--- a/db/package.json
+++ b/db/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "dependencies": {
     "@types/mongoose": "^5.11.97",
+    "@types/node": "^22.9.0",
+    "dotenv": "^16.4.5",
     "mongoose": "^8.8.0",
     "redis": "^4.7.0"
   }
