--- a/express-server/package.json
+++ b/express-server/package.json
@@ -11,11 +11,13 @@
   "description": "",
   "dependencies": {
     "@types/express": "^5.0.0",
+    "cors": "^2.8.5",
     "express": "^4.21.1",
     "redis": "^4.7.0",
     "uniqid": "^5.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/uniqid": "^5.3.4"
   }
 }
